# trading-bot

./: .codex_tmp_check.py  .codex_tmp_status.py  .codex_tmp_verify.py  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.history/: .gitignore_20260329121913  README_20260329121913.md  README_20260329125250.md  README_20260329125255.md  README_20260329125305.md  README_20260329125308.md  README_20260329125311.md  README_20260329125313.md  README_20260329125317.md  README_20260329125320.md  README_20260329125322.md  README_20260329125328.md  README_20260329125337.md  README_20260329125356.md  README_20260329125400.md  README_20260329125407.md  README_20260329125410.md  README_20260329125416.md  README_20260329125419.md  README_20260329125422.md  README_20260329125424.md  README_20260329125426.md  README_20260329125435.md  README_20260329125438.md  README_20260329125444.md  README_20260329125448.md  README_20260329125450.md  README_20260329125451.md  README_20260329125454.md  README_20260329125456.md  README_20260329125459.md
.packages/fastapi-0.116.1.dist-info/: RECORD
.packages/httpx-0.28.1.dist-info/: RECORD
.packages/pygments-2.19.2.dist-info/: RECORD
.packages/pytest-8.4.1.dist-info/: RECORD
.packages/python_dotenv-1.2.2.dist-info/: RECORD
.packages/pyyaml-6.0.2.dist-info/: RECORD
.packages/uvicorn-0.35.0.dist-info/: RECORD
dashboard/: app.js  index.html  styles.css
docs/: api.md  architecture.md  database_schema.md  failure_log.md  formulas.md  operating_runbook.md  platform_notes.md  prompt_design.md
scripts/: run_local.ps1
(+83 files in other folders)
